--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trisha Bej | Portfolio</title>
   <!-- Main stylesheet -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="style.css">
+
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-ku6PH3D6Wl4lp1IjgLdqfRoiK1WehNf9OIv7yHn2psOtmZ0jK+HlD53mjfMNuyJtT9m6O8VxLgXY1Zl+8aO1ig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
