--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Hero Section: Split Left-Right Layout -->
   <section class="hero split-hero">
     <div class="hero-left">
-      <img src="{{ url_for('static', filename='hero[bright].jpg') }}" alt="My Photo">
+      <img src="hero[bright].jpg" alt="My Photo">
     </div>
     <div class="hero-right">
       <h1>Trisha Bej</h1>
@@ -38,7 +38,7 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
 </p>
       </div>
       <div class="about-img">
-        <img src="{{ url_for('static', filename='dp.jpg') }}" alt="My Photo">
+        <img src="dp.jpg" alt="My Photo">
       </div>
     </div>
   </section>
@@ -230,7 +230,7 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
   </section>
 
   <!-- Visitor count display -->
-  <p class="visitor-count">Total Visitors: {{ count }}</p>
+  <p class="visitor-count">Thanks for visiting!🌟</p>
 
   <!-- Stardust Canvas (cursor effect) -->
   <canvas id="star-canvas"></canvas>
