--- a/index.html
+++ b/index.html
@@ -187,12 +187,42 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
     </div>
   </section>
 
+
+
+
+
+
+  <!-- Replace your current Contact Section with the updated one below (HTML + CSS only version) -->
+<section class="contact-section">
+  <div class="contact-wrapper">
+    <div class="contact-decor left-line"></div>
+    <div class="contact-content">
+      <h2>Contact Me✉️</h2>
+      <form action="https://formsubmit.co/trishsocials19@gmail.com" method="POST">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_template" value="table">
+
+        <div class="input-group">
+          <input type="text" name="name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+        </div>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+    <div class="contact-decor right-line"></div>
+  </div>
+</section>
+
+
+
+  
   <!-- Contact Form Section (with black background styling via CSS) -->
 <!-- Contact Form Section (with black background styling via CSS) -->
+  <!--
 <section class="contact-section">
   <h2>Contact Me✉️</h2>
   <form id="contactForm" action="https://formsubmit.co/trishsocials19@gmail.com" method="POST">
-    <!-- Required hidden inputs for FormSubmit -->
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="table">
     
@@ -203,7 +233,7 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
   </form>
 </section>
 
-
+-->
   <!--
   <section class="contact-section">
     <h2>Contact Me✉️</h2>
