--- a/index.html
+++ b/index.html
@@ -193,26 +193,24 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
 
 
   <!-- Replace your current Contact Section with the updated one below (HTML + CSS only version) -->
-<section class="contact-section">
-  <div class="contact-wrapper">
-    <div class="contact-decor left-line"></div>
-    <div class="contact-content">
-      <h2>Contact Me✉️</h2>
-      <form action="https://formsubmit.co/trishsocials19@gmail.com" method="POST">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_template" value="table">
+<!-- Contact Section -->
+<section class="contact-section" id="contact">
+  <h2>Let's Connect</h2>
+  <p style="color: #ccc; margin-bottom: 25px; font-size: 1.05rem;">
+    Got a project in mind, a question, or just want to say hi?  
+    Send a message below — I'd love to hear from you.
+  </p>
+  
+  <form class="contact-form" action="https://formspree.io/f/yourformid" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
 
-        <div class="input-group">
-          <input type="text" name="name" placeholder="Your Name" required>
-          <input type="email" name="email" placeholder="Your Email" required>
-        </div>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </div>
-    <div class="contact-decor right-line"></div>
-  </div>
+  <div class="visitor-count">You’re visitor number #<span id="visitorNumber">432</span></div>
 </section>
+
 
 
 
