--- a/index.html
+++ b/index.html
@@ -194,22 +194,42 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
 
   <!-- Replace your current Contact Section with the updated one below (HTML + CSS only version) -->
 <!-- Contact Section -->
+<!-- Contact Section -->
 <section class="contact-section" id="contact">
-  <h2>Let's Connect</h2>
-  <p style="color: #ccc; margin-bottom: 25px; font-size: 1.05rem;">
-    Got a project in mind, a question, or just want to say hi?  
-    Send a message below — I'd love to hear from you.
-  </p>
-  
-  <form class="contact-form" action="https://formspree.io/f/yourformid" method="POST">
+  <h2 style="position: relative; display: inline-block;">
+    <span style="
+      position: absolute;
+      left: -40px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 6px;
+      height: 25px;
+      background: #00b4d8;
+      border-radius: 3px;
+    "></span>
+    
+    Contact Me
+
+    <span style="
+      position: absolute;
+      right: -40px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 6px;
+      height: 25px;
+      background: #ff6f61;
+      border-radius: 3px;
+    "></span>
+  </h2>
+
+  <form class="contact-form" action="https://formspree.io/f/yourformid" method="POST" style="margin-top: 25px;">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
-    <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
-    <button type="submit">Send Message</button>
+    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+    <button type="submit">Send</button>
   </form>
-
-  <div class="visitor-count">You’re visitor number #<span id="visitorNumber">432</span></div>
 </section>
+
 
 
 
