--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ With a focus on continuous learning and adaptability, I thrive in collaborative 
     "></span>
   </h2>
 
-  <form class="contact-form" action="https://formspree.io/f/yourformid" method="POST" style="margin-top: 25px;">
+  <form class="contact-form" action="https://formsubmit.co/trishsocials19@gmail.com" method="POST" style="margin-top: 25px;">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
     <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
