--- a/index.html
+++ b/index.html
@@ -1,234 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trisha Bej | Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
-
-  <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-
-  <!-- ✨ Sticky Glass Header -->
-  <header class="site-header">
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#education">Education</a>
-      <a href="#projects">Projects</a>
-      <a href="#achievements">Achievements</a>
-      <a href="#certificates">Certificates</a>
-      <a href="#languages">Languages</a>
-      <a href="#interests">Interests</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
 
   <!-- Hero Section -->
   <section class="hero split-hero">
     <div class="hero-left">
-      <img src="hero[bright].jpg" alt="My Photo" />
+      <img src="hero[bright].jpg" alt="My Photo">
     </div>
     <div class="hero-right">
       <h1>Trisha Bej</h1>
-      <p>AI Enthusiast | Designer | Developer | Data Analyst</p> 
+      <p>AI Enthusiast | Designer | Developer | Data Analyst</p>
       <p>💭Dreamer in Code & Cosmos💭</p>
       <p class="location"><i class="fas fa-map-marker-alt"></i>📍 Kolkata, West Bengal</p>
     </div>
   </section>
 
-  <!-- About Section -->
-  <section id="about" class="about">
-    <div class="about-content">
-      <div class="about-text">
-        <h2>About Me</h2>
-        <p>I am a Computer Science undergraduate with a strong foundation in programming and a growing specialization in Web Development (Frontend), Artificial Intelligence & Machine Learning, Data Analysis, and UI/UX Design. I am passionate about creating intuitive digital experiences and data-driven solutions that align with user needs and business goals.</p>
-        <p>With a focus on continuous learning and adaptability, I thrive in collaborative environments where innovation and problem-solving are key.</p>
-      </div>
-      <div class="about-img">
-        <img src="dp.jpg" alt="My Photo"/>
-      </div>
-    </div>
-  </section>
+  <!-- Stylish Header/Nav Section -->
+  <nav class="glass-nav">
+    <ul>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#achievements">Achievements</a></li>
+      <li><a href="#certificates">Certificates</a></li>
+      <li><a href="#languages">Languages</a></li>
+      <li><a href="#interests">Interests</a></li>
+      <li><a href="#contact">Let’s Connect</a></li>
+    </ul>
+  </nav>
 
-  <!-- Education -->
-  <section id="education">
-    <h2>Education</h2>
-    <div class="dual-section">
-      <div class="dual-box">
-        <ul>
-          <li>B.Tech in CSE – IEM, Kolkata</li>
-          <p>{ Expected Graduation: 2027🎓 }</p>
-          <li>Minor Degree in Cyber Security🛅</li>
-          <li>ST. Xavier's Institution [10th & 12th]🎒</li>
-          <p>{ ICSE: 2021, ISC: 2023 }</p>
-        </ul>
-      </div>
-    </div>
-  </section>
+  <!-- Rest of your sections below (unchanged IDs!) -->
+  <!-- Don't forget to give `id="about"` and `id="projects"` to those sections -->
 
-  <!-- Skills -->
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="dual-section">
-      <div class="dual-box">
-        <ul>
-          <li>💻 Python, C, Java, SQL, HTML, CSS, JS</li>
-          <li>🛠️ Flask, Bootstrap, Pandas, Sklearn</li>
-          <li>🤖 CNNs, Preprocessing, Evaluation</li>
-          <li>🗃️ MySQL, SQLite</li>
-          <li>📈 Power BI, Matplotlib</li>
-          <li>🧰 VS Code, GitHub, Figma, MATLAB</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Projects -->
-  <section id="projects" class="projects">
-    <h2>Projects</h2>
-    <div class="project-card">
-      <h3>🎨 UI/UX Design – Web & App Interfaces</h3>
-      <p>Figma-based user-friendly designs for seamless experiences.</p>
-    </div>
-    <div class="project-card">
-      <h3>🖌️ Creative Design – Posters & Logos</h3>
-      <p>Digital posters and branding materials for academia & events.</p>
-    </div>
-    <div class="project-card">
-      <h3>📊 Crime Pattern Detection Dashboard</h3>
-      <p>SQL-driven crime trend insights for civic awareness.</p>
-    </div>
-    <div class="project-card">
-      <h3>🧠 AI-Based Food Freshness Assessor</h3>
-      <p>Image-based CNN model for sustainable food tech.</p>
-    </div>
-    <div class="project-card">
-      <h3>🏢 Restaurant Management System</h3>
-      <p>Integrated dashboard for orders, staff & inventory.</p>
-    </div>
-    <div class="project-card">
-      <h3>🔦 Arduino Laser Detection System</h3>
-      <p>Real-time installation with adjustable sensitivity.</p>
-    </div>
-  </section>
-
-  <!-- Achievements -->
-  <section id="achievements">
-    <h2>Achievements</h2>
-    <div class="dual-section">
-      <div class="dual-box">
-        <ul>
-          <li>📝 Published AI-based fish quality paper – NCRTST’25</li>
-          <li>🏆 Top 5 in national hackathons</li>
-          <li>🎨 UI/UX & dataset building projects</li>
-          <li>🎤 Public speaker & event anchor</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Certificates -->
-  <section id="certificates">
-    <h2>Certificates</h2>
-    <div class="dual-section">
-      <div class="dual-box">
-        <ul>
-          <li>🎓 IBM Data Science Specialization</li>
-          <li>🎨 UI/UX Internship Certificate</li>
-          <li>🤖 Google AI Essentials</li>
-          <li>🧠 MATLAB Onramp</li>
-          <li>🌐 IBM Web Dev (HTML, CSS, JS)</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Languages -->
-  <section id="languages">
-    <h2>Languages</h2>
-    <div class="dual-section">
-      <div class="dual-box">
-        <ul>
-          <li><strong>🌐 Fluent:</strong> English, Hindi, Bengali</li>
-          <li><strong>✍️ Written:</strong> English & Bengali</li>
-          <li><strong>🎤 Confidence:</strong> 10/10 😉</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Interests -->
-  <section id="interests">
-    <h2>Interests</h2>
-    <div class="dual-section">
-      <div class="dual-box">
-        <ul>
-          <li>🎙️ Public Speaking & Poetic Recitations</li>
-          <li>✍️ Creative & Reflective Writing</li>
-          <li>🎨 UI/UX & Aesthetic Design</li>
-          <li>🤖 Tech for Social Good</li>
-          <li>🎸 Ukulele</li>
-          <li>📚 Bookworm</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Connect Section -->
-  <section class="connect">
-    <h2>Let’s Connect🔗</h2>
-    <div class="social-links">
-      <a href="https://www.linkedin.com/in/trisha-bej-504bba271" class="social-link" target="_blank">
-        <i class="fab fa-linkedin"></i> LinkedIn💼
-      </a>
-      <a href="https://www.instagram.com/trisha.b_04?igsh=MThhMzkzdGV2cDEzNQ==" class="social-link" target="_blank">
-        <i class="fab fa-instagram"></i> Instagram📸
-      </a>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="contact-section" id="contact">
-    <h2 class="contact-heading">Contact Me <span class="emoji">✉️</span></h2>
-    <form id="contactForm" class="contact-form" action="https://formsubmit.co/trishsocials19@gmail.com" method="POST">
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_template" value="table">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
-  <p class="visitor-count">Thanks for visiting!🌟</p>
-
+  <!-- Sparkle Cursor -->
   <canvas id="star-canvas"></canvas>
+
   <script>
-    // canvas sparkle code as you already have it
-  </script>
-  <script>
-    document.getElementById('contactForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const form = e.target;
-      const formData = new FormData(form);
-      fetch(form.action, {
-        method: form.method,
-        body: formData,
-        headers: { 'Accept': 'application/json' }
-      }).then(response => {
-        if (response.ok) {
-          alert("Message sent successfully! Thank you 🌸");
-          form.reset();
-        } else {
-          alert("Oops! Something went wrong. Please try again.");
-        }
-      }).catch(() => {
-        alert("Network error. Please check your connection.");
+    const canvas = document.getElementById('star-canvas');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    canvas.style.position = 'fixed';
+    canvas.style.top = 0;
+    canvas.style.left = 0;
+    canvas.style.pointerEvents = 'none';
+    canvas.style.zIndex = 999;
+
+    let particles = [];
+    function createParticle(x, y) {
+      particles.push({
+        x: x,
+        y: y,
+        radius: Math.random() * 2 + 1,
+        opacity: 1,
+        speedX: (Math.random() - 0.5) * 1,
+        speedY: (Math.random() - 0.5) * 1,
       });
+    }
+    function drawParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let i = 0; i < particles.length; i++) {
+        const p = particles[i];
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2, false);
+        ctx.fillStyle = `rgba(166, 107, 255, ${p.opacity})`;
+        ctx.fill();
+
+        p.x += p.speedX;
+        p.y += p.speedY;
+        p.opacity -= 0.02;
+        if (p.opacity <= 0) {
+          particles.splice(i, 1);
+          i--;
+        }
+      }
+      requestAnimationFrame(drawParticles);
+    }
+    document.addEventListener('mousemove', (e) => {
+      for (let i = 0; i < 3; i++) {
+        createParticle(e.clientX, e.clientY);
+      }
+    });
+    drawParticles();
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
     });
   </script>
+
 </body>
 </html>
