--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+  <!-- 🌗 Theme Toggle Button -->
+<button id="themeToggle" class="theme-toggle" aria-label="Toggle Theme">🌙</button>
+
+
   <!-- Hero Section -->
   <section class="hero split-hero">
     <div class="hero-left">
@@ -493,6 +497,25 @@
   }
 </script>
 
+
+
+  <script>
+  const toggleBtn = document.getElementById('themeToggle');
+  const body = document.body;
+
+  // Check saved theme
+  if (localStorage.getItem('theme') === 'dark') {
+    body.classList.add('dark-mode');
+    toggleBtn.textContent = '☀️';
+  }
+
+  toggleBtn.addEventListener('click', () => {
+    body.classList.toggle('dark-mode');
+    const isDark = body.classList.contains('dark-mode');
+    toggleBtn.textContent = isDark ? '☀️' : '🌙';
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+  });
+</script>
 
 </body>
 </html>
