--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li><a href="#certificates">Certificates</a></li>
       <li><a href="#languages">Languages</a></li>
       <li><a href="#interests">Interests</a></li>
-      <li><a href="#contact">Let’s Connect</a></li>
+      <li><a href="#contact">Let’s Connect!</a></li>
     </ul>
   </nav>
 
@@ -472,7 +472,7 @@
   }
 
   async function getTrishaReply(userMsg) {
-    const apiKey = 'YOUR_GOOGLE_API_KEY_HERE'; // Replace with your key
+    const apiKey = 'AIzaSyCe_dQkyRdNEUeIRUy0y1IE1LH2cc3sXTA'; // Replace with your key
     const prompt = `You are Trisha Bej, an AI assistant representing your portfolio. Respond warmly, smartly, and clearly based on Trisha's skills, projects, and achievements. The user asked: ${userMsg}`;
 
     try {
