--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
   }
 
   async function getTrishaReply(userMsg) {
-    const apiKey = 'AIzaSyCe_dQkyRdNEUeIRUy0y1IE1LH2cc3sXTA'; // Replace with your key
+    const apiKey = ''; // Replace with your key
     const prompt = `You are Trisha Bej, an AI assistant representing your portfolio. Respond warmly, smartly, and clearly based on Trisha's skills, projects, and achievements. The user asked: ${userMsg}`;
 
     try {
