--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
   async function getTrishaReply(userMsg) {
     try {
-      const res = await fetch("https://your-render-url.onrender.com/chat", {
+      const res = await fetch("https://trisha-site.onrender.com", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ message: userMsg })
